--- a/scraper/requirements.txt
+++ b/scraper/requirements.txt
@@ -1,13 +1,31 @@
+attrs==25.3.0
+certifi==2025.8.3
 contourpy==1.3.2
 cycler==0.12.1
+dnspython==2.7.0
 fonttools==4.58.1
+h11==0.16.0
+idna==3.10
 kiwisolver==1.4.8
 matplotlib==3.10.3
 numpy==2.2.6
+outcome==1.3.0.post0
 packaging==25.0
 pillow==11.2.1
+pymongo==4.14.0
 pyparsing==3.2.3
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pywatchman==3.0.0
+selenium==4.34.2
 six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+trio==0.30.0
+trio-websocket==0.12.2
+typing_extensions==4.14.1
+urllib3==2.5.0
+websocket-client==1.8.0
 wheel==0.45.1
+wsproto==1.2.0
